# decomp-rldec

./: .gitignore  Dockerfile  README.md  decompose_cli.py  main.py  pyproject.toml  requirements.txt  server.py  setup.py  train_cli.py
jobs/: CombFlattenedDQNjob.py  CombSequentialDQNjob.py  FlattenedDQNjob.py  SequentialDQNjob.py
protos/rldec/v1/: rldec.proto
rldec/: callbacks.py  config.py  data_handler.py  decompose.py  features.py  loggers.py  logging.conf  model_handler.py  train_model.py  utils.py
rldec/agents/: dqntrainer.py
rldec/clients/: parsingClient.py
rldec/default_configs/: default_config_CombSequential.json  default_config_Flattened.json  default_config_Sequential.json
rldec/environments/: __init__.py  decomp.py  flattened.py  flattened_seq.py  sequential.py
rldec/metrics/: __init__.py  coupling.py  granularity.py  modularity.py  utils.py
rldec/models/parse/v1/: __init__.py  parse_pb2.py  parse_pb2_grpc.py
rldec/models/parse/v2/: parse_pb2.py
rldec/models/rldec/v1/: __init__.py  rldec_pb2.py  rldec_pb2_grpc.py
