# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rldec"
dynamic = ["version"]
description = "RLDec is a decomposition tool that analyzes the source code of a monolithic Java application and suggests the recommended microservices for each class in the system using a Deep Reinforcement Learning based method."
readme = "README.md"
authors = [{ name = "Khaled Sellami"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
]
keywords = ["decomposition", "monolith", "microservices", "automation", "refactoring", "reinforcement learning"]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.11.4",
    "pandas<=2.2.0,>=1.5.3",
    "tifffile>=2024.1.30",
    "protobuf>=4.25.2,<5.26.0rc1",
    "networkx>=2.8.4",
    "ray[rllib]>=2.9.2",
    "scikit-learn>=1.2.2",
    "gymnasium>=0.28.1",
    "torch>=2.1.0",
    "grpcio>=1.48.2"
]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = {attr = "rldec._version.__version__"}

[tool.setuptools.package-data]
rldec = ["logging.conf", "default_configs/*.json"]

[tool.setuptools.packages.find]
include = ["rldec*"]
exclude = ["docs*", "test*"]


[project.urls]
Repository = "https://github.com/khaledsellami/decomp-rldec"
Issues = "https://github.com/khaledsellami/decomp-rldec/issues"
